Create AngularJS module and try fetching data directly from the controller. It works fine.

--- a/public/index.html
+++ b/public/index.html
@@ -14,18 +14,21 @@
 
 </head>
 
-<!-- TODO Add a directive to the body element in order to 
-  bootstrap your Angular app. Be sure to use the name 'app' 
+<!-- TODO Add a directive to the body element in order to
+  bootstrap your Angular app. Be sure to use the name 'app'
   so that the provided Angular routes function properly. -->
-<body>
+<body ng-app="app">
 
   <div class="grid-container">
 
-    <div class="grid-100">
+    <div class="grid-100" ng-controller="MainCtrl">
       <h1>
         <img src="images/chefbot.svg" height="60px">
         <br>
-        My Recipes
+        <a ng-click="diplayFoo" >
+          My Recipes
+        </a>
+
       </h1>
     </div>
 
@@ -34,7 +37,7 @@
       <div class="recipes">
 
         <!-- The ng-view Angular directive is used to tell the Angular router
-              where requested views should be loaded. Removing this directive 
+              where requested views should be loaded. Removing this directive
               will cause routing to not function properly. -->
         <div ng-view></div>
 
@@ -46,9 +49,9 @@
 
   <script src="vendor/angular.js"></script>
   <script src="vendor/angular-route.js"></script>
-  
-  <!-- TODO Add script tags for your JavaScript files here -->
 
+  <!-- TODO Add script tags for your JavaScript files here -->
+  <script src="scripts/app.js" charset="utf-8"></script>
   <script src="scripts/route-config.js"></script>
 </body>
 
