--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       <h1>
         <img src="images/chefbot.svg" height="60px">
         <br>
-        <a ng-click="diplayFoo" >
+        <a ng-click="helloWorld()" >
           My Recipes
         </a>
 
@@ -53,6 +53,7 @@
   <!-- TODO Add script tags for your JavaScript files here -->
   <script src="scripts/app.js" charset="utf-8"></script>
   <script src="scripts/route-config.js"></script>
+  <script src="scripts/services/dataService.js" charset="utf-8"></script>
 </body>
 
 </html>
