--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
   <div class="grid-container">
 
-    <div class="grid-100" ng-controller="MainCtrl">
+    <div class="grid-100" ng-controller="recipesCtrl">
       <h1>
         <img src="images/chefbot.svg" height="60px">
         <br>
@@ -53,6 +53,7 @@
   <!-- TODO Add script tags for your JavaScript files here -->
   <script src="scripts/app.js" charset="utf-8"></script>
   <script src="scripts/route-config.js"></script>
+  <script src="scripts/controllers/recipesCtrl.js" charset="utf-8"></script>
   <script src="scripts/services/dataService.js" charset="utf-8"></script>
 </body>
 
