--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,11 @@
 
   <div class="grid-container">
 
-    <div class="grid-100" ng-controller="recipesCtrl">
+    <div class="grid-100">
       <h1>
         <img src="images/chefbot.svg" height="60px">
         <br>
-        <a ng-click="getRecipesByCategory()" >
+        <a>
           My Recipes
         </a>
 
