Add ng-href in order to display the recipe detail

--- a/public/index.html
+++ b/public/index.html
@@ -51,9 +51,16 @@
   <script src="vendor/angular-route.js"></script>
 
   <!-- TODO Add script tags for your JavaScript files here -->
+
+  <!-- Main module and router -->
   <script src="scripts/app.js" charset="utf-8"></script>
   <script src="scripts/route-config.js"></script>
+
+  <!-- Application Controllers -->
   <script src="scripts/controllers/RecipesController.js" charset="utf-8"></script>
+  <script src="scripts/controllers/RecipeDetailController.js" charset="utf-8"></script>
+
+  <!-- Application Services -->
   <script src="scripts/services/dataService.js" charset="utf-8"></script>
 </body>
 
