--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,9 @@
       <h1>
         <img src="images/chefbot.svg" height="60px">
         <br>
-        <a>
+        <a
+          ng-href="/#!"
+        >
           My Recipes
         </a>
 
