--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
   <!-- Application Controllers -->
   <script src="scripts/controllers/RecipesController.js" charset="utf-8"></script>
   <script src="scripts/controllers/RecipeDetailController.js" charset="utf-8"></script>
+  <script src="scripts/controllers/DeleteRecipeController.js" charset="utf-8"></script>
 
   <!-- Application Services -->
   <script src="scripts/services/dataService.js" charset="utf-8"></script>
