--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
 
 </head>
 
-<!-- TODO Add a directive to the body element in order to
-  bootstrap your Angular app. Be sure to use the name 'app'
+<!-- TODO Add a directive to the body element in order to 
+  bootstrap your Angular app. Be sure to use the name 'app' 
   so that the provided Angular routes function properly. -->
-<body ng-app="app">
+<body>
 
   <div class="grid-container">
 
@@ -25,12 +25,7 @@
       <h1>
         <img src="images/chefbot.svg" height="60px">
         <br>
-        <a
-          ng-href="/#!"
-        >
-          My Recipes
-        </a>
-
+        My Recipes
       </h1>
     </div>
 
@@ -39,7 +34,7 @@
       <div class="recipes">
 
         <!-- The ng-view Angular directive is used to tell the Angular router
-              where requested views should be loaded. Removing this directive
+              where requested views should be loaded. Removing this directive 
               will cause routing to not function properly. -->
         <div ng-view></div>
 
@@ -51,20 +46,10 @@
 
   <script src="vendor/angular.js"></script>
   <script src="vendor/angular-route.js"></script>
-
+  
   <!-- TODO Add script tags for your JavaScript files here -->
 
-  <!-- Main module and router -->
-  <script src="scripts/app.js" charset="utf-8"></script>
   <script src="scripts/route-config.js"></script>
-
-  <!-- Application Controllers -->
-  <script src="scripts/controllers/RecipesController.js" charset="utf-8"></script>
-  <script src="scripts/controllers/RecipeDetailController.js" charset="utf-8"></script>
-  <script src="scripts/controllers/DeleteRecipeController.js" charset="utf-8"></script>
-
-  <!-- Application Services -->
-  <script src="scripts/services/dataService.js" charset="utf-8"></script>
 </body>
 
 </html>
