--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,9 @@
   <script src="scripts/route-config.js"></script>
 
 
+  <!-- Application controllers -->
+  <script src="scripts/controllers/RecipesController.js" charset="utf-8"></script>
+
   <!-- Application services -->
   <script src="scripts/services/dataService.js" charset="utf-8"></script>
 </body>
