Fire a new action when the user clicks the add recipe button

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,10 @@
       <h1>
         <img src="images/chefbot.svg" height="60px">
         <br>
-        My Recipes
+        <A
+          ng-href="#">
+          My Recipes
+        </A>
       </h1>
     </div>
 
