--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
 
   <!-- Application controllers -->
   <script src="scripts/controllers/RecipesController.js" charset="utf-8"></script>
+  <script src="scripts/controllers/RecipeDetailController.js" charset="utf-8"></script>
 
   <!-- Application services -->
   <script src="scripts/services/dataService.js" charset="utf-8"></script>
