Add a special recipe view in order to display the recipe when the route is matching

--- a/public/index.html
+++ b/public/index.html
@@ -56,10 +56,10 @@
   <script src="scripts/app.js" charset="utf-8"></script>
   <script src="scripts/route-config.js"></script>
 
-
   <!-- Application controllers -->
   <script src="scripts/controllers/RecipesController.js" charset="utf-8"></script>
   <script src="scripts/controllers/RecipeDetailController.js" charset="utf-8"></script>
+  <script src="scripts/controllers/RecipeViewController.js" charset="utf-8"></script>
 
   <!-- Application services -->
   <script src="scripts/services/dataService.js" charset="utf-8"></script>
