Add a new delete recipe controller and its relativ viez

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,7 @@
   <script src="scripts/controllers/RecipesController.js" charset="utf-8"></script>
   <script src="scripts/controllers/RecipeDetailController.js" charset="utf-8"></script>
   <script src="scripts/controllers/RecipeViewController.js" charset="utf-8"></script>
+  <script src="scripts/controllers/RecipeDeleteController.js" charset="utf-8"></script>
 
   <!-- Application services -->
   <script src="scripts/services/dataService.js" charset="utf-8"></script>
