--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,6 @@
 
 </head>
 
-<!-- TODO Add a directive to the body element in order to
-  bootstrap your Angular app. Be sure to use the name 'app'
-  so that the provided Angular routes function properly. -->
 <body ng-app="app">
 
   <div class="grid-container">
@@ -36,9 +33,7 @@
 
       <div class="recipes">
 
-        <!-- The ng-view Angular directive is used to tell the Angular router
-              where requested views should be loaded. Removing this directive
-              will cause routing to not function properly. -->
+
         <div ng-view></div>
 
         <div class="row">&nbsp;</div>
@@ -47,10 +42,9 @@
     </div>
   </div>
 
+	<!-- Angular main files -->
   <script src="vendor/angular.js"></script>
   <script src="vendor/angular-route.js"></script>
-
-  <!-- TODO Add script tags for your JavaScript files here -->
 
   <!-- Main module and router -->
   <script src="scripts/app.js" charset="utf-8"></script>
